The QTimer initializes spelling after the html message is displayed. This way, all formatting is undone. Spelling is already initiated in the constructor of KMComposeWin, so no harm is done deleting the QTimer.

BUG:106968

svn path=/branches/KDE/3.5/kdepim/; revision=497436